Fix: CSS z-index 조정
Former-commit-id: 060c55b819ae4e3289a29fb50d92e3b656e1cbb7

--- a/FE/src/pages/VideoPage/GuideDetail.module.css
+++ b/FE/src/pages/VideoPage/GuideDetail.module.css
@@ -1,7 +1,8 @@
 .mainView {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  z-index: 2;
 }
